fixed messenger workbreak and whitespace

--- a/src/components/GlobalMessage/GlobalMessage.scss
+++ b/src/components/GlobalMessage/GlobalMessage.scss
@@ -1,13 +1,18 @@
 @import '../../sass/variables', '../../sass/mixins';
 
 .GlobalMessage {
-  border-radius: 10px;
-  border: .5px solid #fff;
-  box-shadow: 2px 2px 2px #000;
-  padding: 5px;
-  margin: 8px;
   p {
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    border: .5px solid #fff;
+    padding: 5px;
+    margin: 8px;
     color: #fff;
+    display: inline-block;
+    word-break: normal;
+    white-space: normal;
+    align-items: center;
     .messenger-name-sender, .messenger-name-receiver {
       margin-right: 10px;
     }
